[gd_scene load_steps=17 format=3 uid="uid://8pv5dj2wmaf0"]

[ext_resource type="Script" uid="uid://dovewhoamjlpw" path="res://player/script/player_controller.gd" id="1_iki0w"]
[ext_resource type="PackedScene" uid="uid://coee1r3olww4k" path="res://player/scene/pov_2.tscn" id="2_86052"]
[ext_resource type="Script" uid="uid://cpkosbrsii7j2" path="res://player/script/fps.gd" id="2_nmcgq"]
[ext_resource type="Texture2D" uid="uid://c33f1h0ujdhfq" path="res://assests/crosshair/crosshair044.png" id="3_t4lix"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iki0w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_28lys"]
lightmap_size_hint = Vector2i(17, 14)
add_uv2 = true
radial_segments = 20

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4lhob"]
height = 1.4

[sub_resource type="SphereShape3D" id="SphereShape3D_iki0w"]

[sub_resource type="Animation" id="Animation_45fae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jjo6d"]
resource_name = "crouch"

[sub_resource type="Animation" id="Animation_nmcgq"]
resource_name = "jump"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1288, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.134218, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0698132, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kljte"]
resource_name = "landing"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.134218, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.134218, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0698132, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_47d28"]
resource_name = "roll"
length = 0.6
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.305345, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.305345, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.14159, 0, 0), Vector3(-6.28319, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wylx6"]
resource_name = "side_way_movement_left"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.278502),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.10472), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fdb53"]
resource_name = "side_way_movement_right"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.278502),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.10472), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1axc"]
_data = {
&"RESET": SubResource("Animation_45fae"),
&"crouch": SubResource("Animation_jjo6d"),
&"jump": SubResource("Animation_nmcgq"),
&"landing": SubResource("Animation_kljte"),
&"roll": SubResource("Animation_47d28"),
&"side_way_movement_left": SubResource("Animation_wylx6"),
&"side_way_movement_right": SubResource("Animation_fdb53")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_iki0w")
sensitivity = 0.1
slide_timer_max = 1.2
sliding_speed = 15.0
lerp_speed = 9.0

[node name="un_crouched_collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_iki0w")
debug_color = Color(2.69532e-06, 0.791304, 0.92051, 0.42)

[node name="MeshInstance3D" type="MeshInstance3D" parent="un_crouched_collision_shape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0079298, -2.38419e-07, 0.00433207)
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_28lys")
skeleton = NodePath("../../..")

[node name="crouched_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
shape = SubResource("CapsuleShape3D_4lhob")
debug_color = Color(2.69532e-06, 0.791304, 0.92051, 0.42)

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.651091, 0)

[node name="eye" type="Node3D" parent="head"]

[node name="Camera3D" type="Camera3D" parent="head/eye"]
cull_mask = 1048573

[node name="UI" type="Node" parent="head/eye/Camera3D"]

[node name="player_movement_Debugger" type="Control" parent="head/eye/Camera3D/UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_states_and_speed" type="VBoxContainer" parent="head/eye/Camera3D/UI/player_movement_Debugger"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="state" type="Label" parent="head/eye/Camera3D/UI/player_movement_Debugger/player_states_and_speed"]
unique_name_in_owner = true
layout_mode = 2
text = "Player state"

[node name="speed_label" type="Label" parent="head/eye/Camera3D/UI/player_movement_Debugger/player_states_and_speed"]
unique_name_in_owner = true
layout_mode = 2
text = "SPEED:"

[node name="fps" type="Label" parent="head/eye/Camera3D/UI/player_movement_Debugger/player_states_and_speed"]
layout_mode = 2
text = "SPEED:"
script = ExtResource("2_nmcgq")

[node name="TextureRect" type="TextureRect" parent="head/eye/Camera3D/UI/player_movement_Debugger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_t4lix")
expand_mode = 1

[node name="gun_stats" type="HBoxContainer" parent="head/eye/Camera3D/UI/player_movement_Debugger"]
layout_mode = 0
offset_left = 357.0
offset_top = 117.0
offset_right = 548.0
offset_bottom = 235.0

[node name="bullets_labels" type="Label" parent="head/eye/Camera3D/UI/player_movement_Debugger/gun_stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "bullets"

[node name="shothun" type="Node3D" parent="head/eye"]

[node name="bullets_container" type="Node3D" parent="head/eye/shothun"]

[node name="bullet" type="RayCast3D" parent="head/eye/shothun/bullets_container"]
enabled = false
target_position = Vector3(0, 0, -100)

[node name="bullet2" type="RayCast3D" parent="head/eye/shothun/bullets_container"]
target_position = Vector3(0, 0, -100)

[node name="bullet3" type="RayCast3D" parent="head/eye/shothun/bullets_container"]
target_position = Vector3(0, 0, -100)

[node name="bullet4" type="RayCast3D" parent="head/eye/shothun/bullets_container"]
target_position = Vector3(0, 0, -100)

[node name="bullet5" type="RayCast3D" parent="head/eye/shothun/bullets_container"]
target_position = Vector3(0, 0, -100)

[node name="bullet6" type="RayCast3D" parent="head/eye/shothun/bullets_container"]
target_position = Vector3(0, 0, -100)

[node name="SubViewportContainer" type="SubViewportContainer" parent="head/eye"]
unique_name_in_owner = true
offset_right = 1154.0
offset_bottom = 646.0
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="head/eye/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="POV_2" parent="head/eye/SubViewportContainer/SubViewport" instance=ExtResource("2_86052")]

[node name="obstacle_check" type="Node3D" parent="head"]

[node name="obstacle_checker" type="ShapeCast3D" parent="head/obstacle_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.873617, 0)
shape = SubResource("SphereShape3D_iki0w")
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="hand_View" type="Node3D" parent="head"]

[node name="PLAYER_ANIMATION" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k1axc")
}
